# osm-pbf-parquet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_test.yaml  release_deploy.yaml
benches/: benchmark.rs
src/: lib.rs  main.rs  osm_arrow.rs  pbf.rs  sink.rs  util.rs
test/: prepare.sh  requirements.txt  test.sh  validate.py
