[package]
name = "osm-pbf-parquet"
version = "0.6.0"
edition = "2021"

[dependencies]
arrow = "52.1.0"
bytes = "1.6.1"
clap = { version = "4.5.9", features = ["derive"] }
flate2 = { version = "1.0.30", features = ["zlib-ng"], default-features = false }
object_store = {version = "0.10.2", features = ["aws"] }
osmpbf = { version = "0.3.4", features = ["zlib-ng"], default-features = false }
parquet = { version = "52.1.0", features = ["async"] }
rayon = "1.10.0"
sysinfo = "0.30.13"
tokio = { version =  "1.38.1", features = ["rt", "rt-multi-thread", "io-util"] }
tokio-util = {version = "0.7.11", features = ["io-util"] }
url = "2.5.2"

[dev-dependencies]
criterion = "0.5.1"

[lib]
name = "osm_pbf_parquet"
path = "src/lib.rs"

[[bin]]
name = "osm-pbf-parquet"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false
