[package]
name = "osm-pbf-parquet"
version = "0.7.1"
edition = "2021"

[dependencies]
anyhow = "1.*"
arrow = "52.*"
bytes = "1.*"
clap = { version = "4.*", features = ["derive"] }
env_logger = "0.11.*"
flate2 = { version = "1.*", features = ["zlib-ng"], default-features = false }
futures = "0.3.*"
futures-util = "0.3.*"
log = "0.4.*"
object_store = {version = "0.10.2", features = ["aws"] }
osmpbf = { version = "0.3.*", features = ["zlib-ng", "async"], default-features = false, git = "https://github.com/brad-richardson/osmpbf.git", branch = "async-blob-reader" }
parquet = { version = "52.*", features = ["async"] }
sysinfo = "0.31.*"
tokio = { version =  "1.*", features = ["rt", "rt-multi-thread", "io-util"] }
tokio-util = {version = "0.7.*", features = ["io-util"] }
url = "2.*"

[dev-dependencies]
criterion = { version = "0.5.*", features = ["async_futures", "async_tokio"] }

[lib]
name = "osm_pbf_parquet"
path = "src/lib.rs"

[[bin]]
name = "osm-pbf-parquet"
path = "src/main.rs"

[[bench]]
name = "benchmark"
harness = false
